--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,12 @@
 </head>
 <body>
 	<h2>hello </h2>
-	<p>hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello</p>
+	<p>My love</p>
+
+	<img src="img/1.jpg"><br><br>
+	<img src="img/2.jpg"><br><br>
+
+	<p>My Love &amp; Me</p>
 
 	<script src="cordova.js"></script>
 </body>
