--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,47 @@
 <html>
 <head>
-	<title>hello</title>
+	<title>My Love ;D</title>
+
+	<script src="js/jQuery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+	<link rel="stylesheet" href="css/style.css"/>
 </head>
-<body>
-	<h2>hello </h2>
-	<p>My love</p>
+<body class="bg_color_blue">
 
-	<img src="img/1.jpg"><br><br>
-	<img src="img/2.jpg"><br><br>
 
-	<p>My Love &amp; Me</p>
+<div class="page index">
 
-	<script src="cordova.js"></script>
+	<div class="container">
+		<div class="row">
+
+			<div class="col-sm-12">
+				<h2 class="text-center">Do u Love me ?</h2>
+			</div>
+
+			<div class="col-sm-12 text-center">
+				<button class="btn btn-default yes_btn">Yes</button>
+				<button class="btn btn-default no_btn">No</button>
+			</div>
+
+
+		</div><!-- Main Row end -->
+	</div><!-- Main Container end -->
+
+</div><!-- page index end -->
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
