--- a/www/index.html
+++ b/www/index.html
@@ -22,10 +22,14 @@
 			</div>
 
 			<div class="col-sm-12 text-center">
-				<button class="btn btn-default yes_btn">Yes</button>
+				<a href="home.html"><button class="btn btn-default yes_btn">Yes</button></a>
 				<button class="btn btn-default no_btn">No</button>
-			</div>
+			</div>  
 
+			<div class="col-sm-12 my_name">
+				<p>Ju ju</p>
+			</div>
+  
 
 		</div><!-- Main Row end -->
 	</div><!-- Main Container end -->
