--- a/www/index.html
+++ b/www/index.html
@@ -17,16 +17,16 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-sm-12">
+			<div class="col-xs-12">
 				<h2 class="text-center">Do u Love me ?</h2>
 			</div>
 
-			<div class="col-sm-12 text-center">
-				<a href="home.html"><button class="btn btn-default yes_btn">Yes</button></a>
+			<div class="col-xs-12 text-center">
+				<a href="menu.html"><button class="btn btn-default yes_btn">Yes</button></a>
 				<button class="btn btn-default no_btn">No</button>
 			</div>  
 
-			<div class="col-sm-12 my_name">
+			<div class="col-xs-12 my_name">
 				<p>Ju ju</p>
 			</div>
   
