--- a/www/menu.html
+++ b/www/menu.html
@@ -35,9 +35,18 @@
 		</div>
 	</a>
 
-	<div class="col-xs-6 Color_4">`
-		<span class="glyphicon glyphicon-picture"></span>
-		<p>gallery</p>
+	<a href="gallery.html">
+		<div class="col-xs-6 Color_4">`
+			<span class="glyphicon glyphicon-picture"></span>
+			<p>gallery</p>
+		</div>
+	</a>
+
+	<div class="col-xs-12 birthday">
+		<img src="img/birthday.png" class="img-responsive">
+		<p><i>happy birthday my love</i></p>
+		<p>tharthar</p>
+	
 	</div>
 
 </div>
