--- a/www/menu.html
+++ b/www/menu.html
@@ -42,12 +42,14 @@
 		</div>
 	</a>
 
-	<div class="col-xs-12 birthday">
-		<img src="img/birthday.png" class="img-responsive">
-		<p><i>happy birthday my love</i></p>
-		<p>tharthar</p>
-	
-	</div>
+	<a href="gift.html">
+		<div class="col-xs-12 Color_5">
+			<span class="glyphicon glyphicon-gift"></span>
+			<p>Present for u</p>
+		</div>
+	</a>
+
+
 
 </div>
 
